--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM1ROuaUPCIhgJBUFQjhBNW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +44,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "hasdhakjsdh"
       ],
       "execution_count": null,
       "outputs": []
