--- a/code/federated_main.ipynb
+++ b/code/federated_main.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "federated_main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNpb8EedxRyvY46iaVpRd/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +35,8 @@
         "# -*- coding: utf-8 -*-\n",
         "# Python version: 3.6\n",
         "\n",
+        "!pip install import-ipynb\n",
+        "import import_ipynb\n",
         "\n",
         "import os\n",
         "import sys\n",
