--- a/code/federated_main.ipynb
+++ b/code/federated_main.ipynb
@@ -35,8 +35,6 @@
         "# -*- coding: utf-8 -*-\n",
         "# Python version: 3.6\n",
         "\n",
-        "!pip install import-ipynb\n",
-        "import import_ipynb\n",
         "\n",
         "import os\n",
         "import sys\n",
@@ -54,7 +52,7 @@
         "    os.system('pip install tensorboardX')\n",
         "    from tensorboardX import SummaryWriter \n",
         "\n",
-        "from options import args_parser\n",
+        "from options.ipynb import args_parser\n",
         "from update import LocalUpdate, test_inference \n",
         "from models import MLP, CNNMnist, CNNFashion_Mnist, CNNCifar\n",
         "from utils import get_dataset, average_weights, exp_details\n",
