--- a/code/utils.ipynb
+++ b/code/utils.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "utils.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOF6O4BB0QqPJQIxRlSiv8H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +34,17 @@
         "#!/usr/bin/env python\n",
         "# -*- coding: utf-8 -*-\n",
         "# Python version: 3.6\n",
+        "\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "    import import_ipynb\n",
+        "except:\n",
+        "    os.system('pip install import-ipynb')\n",
+        "    import import_ipynb \n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "import os\n",
         "import copy\n",
