--- a/code/federated_main.ipynb
+++ b/code/federated_main.ipynb
@@ -36,6 +36,7 @@
         "# Python version: 3.6\n",
         "\n",
         "\n",
+        "\n",
         "import os\n",
         "import sys\n",
         "import copy\n",
@@ -43,16 +44,23 @@
         "import pickle\n",
         "import numpy as np\n",
         "from tqdm import tqdm\n",
-        "\n",
-        "\n",
         "import torch\n",
+        "\n",
         "try:\n",
         "    from tensorboardX import SummaryWriter\n",
         "except:\n",
         "    os.system('pip install tensorboardX')\n",
         "    from tensorboardX import SummaryWriter \n",
         "\n",
-        "from options.ipynb import args_parser\n",
+        "\n",
+        "try:\n",
+        "    import import_ipynb\n",
+        "except:\n",
+        "    print('installing import-ipynb')\n",
+        "    os.system('pip install import-ipynb')\n",
+        "    import import_ipynb  \n",
+        "\n",
+        "from options import args_parser\n",
         "from update import LocalUpdate, test_inference \n",
         "from models import MLP, CNNMnist, CNNFashion_Mnist, CNNCifar\n",
         "from utils import get_dataset, average_weights, exp_details\n",
