--- a/code/options.ipynb
+++ b/code/options.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "options.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNfmx9IlK7lU2zDq8aFRqSB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +99,7 @@
         "                        help='rounds of early stopping')\n",
         "    parser.add_argument('--verbose', type=int, default=0, help='verbose')\n",
         "    parser.add_argument('--seed', type=int, default=1, help='random seed')\n",
-        "    args = parser.parse_args()\n",
+        "    args, unknown = parser.parse_args()\n",
         "    return args\n"
       ],
       "execution_count": null,
