--- a/code/options.ipynb
+++ b/code/options.ipynb
@@ -99,7 +99,9 @@
         "                        help='rounds of early stopping')\n",
         "    parser.add_argument('--verbose', type=int, default=0, help='verbose')\n",
         "    parser.add_argument('--seed', type=int, default=1, help='random seed')\n",
-        "    args, unknown = parser.parse_args()\n",
+        "\n",
+        "    args, unknown = parser.parse_known_args()\n",
+        "    #args, unknown = parser.parse_args()\n",
         "    return args\n"
       ],
       "execution_count": null,
