--- a/code/federated_main.ipynb
+++ b/code/federated_main.ipynb
@@ -70,10 +70,10 @@
         "    start_time = time.time()\n",
         "    \n",
         "    # define paths\n",
-        "    pathlogs = './logs'\n",
-        "    if not os.path.exists(pathlogs):\n",
-        "        os.makedirs(pathlogs)\n",
-        "    logger = SummaryWriter(pathlogs)\n",
+        "    #pathlogs = './logs'\n",
+        "    #if not os.path.exists(pathlogs):\n",
+        "    #    os.makedirs(pathlogs)\n",
+        "    #logger = SummaryWriter(pathlogs)\n",
         "\n",
         "    args = args_parser()\n",
         "    \n",
@@ -191,7 +191,8 @@
         "        sys.stdout = orig_stout\n",
         "        ftxt.close()\n",
         "        print('outputtxt is closed')\n",
-        "        \n",
+        "\n",
+        "    print('\\n Total Run Time: {0:0.4f}'.format(time.time()-start_time))    \n",
         "        \n",
         "    # Saving the objects train_loss and train_accuracy:\n",
         "    #file_name = './save/objects/{}_{}_{}_C[{}]_iid[{}]_E[{}]_B[{}].pkl'.\\\n",
@@ -200,8 +201,6 @@
         "\n",
         "    #with open(file_name, 'a') as f:\n",
         "    #    pickle.dump([train_loss, train_accuracy], f)\n",
-        "\n",
-        "    print('\\n Total Run Time: {0:0.4f}'.format(time.time()-start_time))\n",
         "    \n",
         "    \n",
         "\n",
