--- a/code/federated_main.ipynb
+++ b/code/federated_main.ipynb
@@ -70,10 +70,10 @@
         "    start_time = time.time()\n",
         "    \n",
         "    # define paths\n",
-        "    #pathlogs = './logs'\n",
+        "    pathlogs = './logs'\n",
         "    #if not os.path.exists(pathlogs):\n",
         "    #    os.makedirs(pathlogs)\n",
-        "    #logger = SummaryWriter(pathlogs)\n",
+        "    logger = SummaryWriter(pathlogs)\n",
         "\n",
         "    args = args_parser()\n",
         "    \n",
